--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,78 @@
 body{
-    
     margin: 0;
+    padding: 0;
 }
+
 .Homepage{
-   background: url(./transport.jpg);
    background-size: cover;
+   padding: 0;
    margin: 0;
+   width: 100vw;
    height: 90vh;
-   display: flex;
+   display: flex; 
    flex-wrap: wrap;
-   justify-content: center;
+   /* justify-content: center; */
    align-items: center;
   /* justify-content: center; */
+}
+.diplay{
+   position: absolute;
+   top: 50%;
+   left: 25%;
+   color: #fafafa;
+   font-weight: bold;
+   font-size: 50px;
+   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   letter-spacing: 0.5rem;
+   overflow: hidden;
+}
+.joinUs{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   margin: 30px;
+}
+
+.diplay span:nth-child(1){
+    position: relative;
+    animation: animate 8s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: backwards;
+}
+.diplay span:nth-child(2){
+   position: relative;
+   animation: animate 8s;
+   animation-delay: 0.25s;
+   animation-iteration-count: infinite;
+   animation-fill-mode: backwards;
+}
+.diplay span:nth-child(3){
+   position: relative;
+   animation: animate 8s;
+   animation-delay: 0.50s;
+   animation-iteration-count: infinite;
+   animation-fill-mode: backwards;
+}
+.diplay span:nth-child(4){
+   position: relative;
+   animation: animate 8s ;
+   animation-delay: 0.75s;
+   animation-iteration-count: infinite;
+   animation-fill-mode: backwards;
+}
+.boardButton{
+   background-color: transparent;
+   color: white;
+   height: 40px;
+   width: 150px;
+   border: 1px solid white;
+  
+}
+.boardButton:hover{
+   background-color: tomato;
+   font-weight: bold;
+   color: black;
+   animation: ease-in-out 2s;
 }
 .board{
    display: flex; 
@@ -43,14 +104,7 @@ body{
    border-radius: 15px;
    
 }
-.boardButton{
-   background-color: transparent;
-   color: white;
-   height: 40px;
-   width: 150px;
-   border: 1px solid white;
-  
-}
+
 .navLink{
    display: inline-block;
    font-size: 18px;
@@ -236,6 +290,20 @@ footer{
 .socialMedia > h4{
    margin-left: 20px;
 }
+#myVideo{
+   position: relative;
+   height: 100vh;
+   width: 100vw;
+   margin: 0;
+   object-fit: cover;
+   padding: 0;
+   /* position: fixed; */
+   /* right: 0;
+   bottom: 0; */
+   /* min-width: 100%; 
+   min-height: 100%; */
+}
+
 @media screen and (max-width: 768px) {
    .navUl{
            display: none; 
@@ -259,4 +327,13 @@ footer{
    .bar{
        display: block;
    }
+ }
+ @keyframes animate{
+    0%{
+       bottom: -100px;
+    }
+    25%{
+      bottom: 0px;
+   }
+
  }
