--- a/src/style.css
+++ b/src/style.css
@@ -211,8 +211,9 @@ body{
    width: 100%;
    height: 100%;
    background-color: #0d0d0d;
-   display: grid;
-   align-items: center;
+   display: flex;
+   /* align-items: center; */
+   justify-content: center;
    top: 0;
    left: 0;
    transition: 0.3s ease-in-out;
