--- a/src/style.css
+++ b/src/style.css
@@ -212,6 +212,7 @@ body{
    height: 100%;
    background-color: #0d0d0d;
    display: flex;
+   color: #fafafa;
    /* align-items: center; */
    justify-content: center;
    top: 0;
@@ -226,7 +227,7 @@ body{
    position: absolute;
    top: 1.2rem;
    right: 1.5rem;
-   background-color: transparent;
+   /* background-color: transparent; */
    font-size: 2rem;
    cursor: pointer;
    outline: none;
@@ -249,7 +250,6 @@ body{
    width: 400px;
    padding: 15px 0;
    transition: 0.2s ease-in-out;   
-   opacity: 100%;
    top: 0;
 }
 .false{
@@ -261,8 +261,7 @@ body{
         width: 400px;
         padding: 15px 0;
         transition: 0.2s ease-in-out;    */
-        opacity: 0;
-        top: -100;
+        
         display: none;
     
 }
