--- a/src/style.css
+++ b/src/style.css
@@ -212,7 +212,6 @@ body{
    height: 100%;
    background-color: #0d0d0d;
    display: flex;
-   color: #fafafa;
    /* align-items: center; */
    justify-content: center;
    top: 0;
@@ -233,37 +232,24 @@ body{
    outline: none;
 }
 .sidebarUl{
-   display: grid;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
-   /* background-color: white; */
    width: 90vw;
    padding: 5px;
-   margin: 0; 
+   
 }
 .sidebarLink{
   list-style: none;
    font-size: 30px;
    font-weight: bold;
    text-align: center;
-   width: 400px;
+   width: auto;
+   color: #fff;
+   cursor: pointer;
    padding: 15px 0;
    transition: 0.2s ease-in-out;   
    top: 0;
 }
-.false{
-  
-       /* list-style: none;
-        font-size: 30px;
-        font-weight: bold;
-        text-align: center;
-        width: 400px;
-        padding: 15px 0;
-        transition: 0.2s ease-in-out;    */
-        
+.false{  
         display: none;
-    
 }
 .dispNone{
    display: none;
