--- a/src/style.css
+++ b/src/style.css
@@ -1,325 +1,501 @@
-body{
-    margin: 0;
-    padding: 0;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.Homepage{
-   background-size: cover;
-   padding: 0;
-   margin: 0;
-   width: 100vw;
-   height: 90vh;
-   display: flex; 
-   flex-wrap: wrap;
-   /* justify-content: center; */
-   align-items: center;
+.Homepage {
+  background-size: cover;
+  padding: 0;
+  margin: 0;
+  width: 100vw;
+  height: 90vh;
+  display: flex;
+  flex-wrap: wrap;
+  /* justify-content: center; */
+  align-items: center;
   /* justify-content: center; */
 }
-.diplay{
-   position: absolute;
-   top: 50%;
-   left: 25%;
-   color: #fafafa;
-   font-weight: bold;
-   font-size: 50px;
-   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-   letter-spacing: 0.5rem;
-   overflow: hidden;
+.layer1 {
+  background: url("driver.jpg");
+  background-size: cover;
 }
-.joinUs{
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   margin: 30px;
+.diplay {
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  color: #fafafa;
+  font-weight: bold;
+  font-size: 50px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  letter-spacing: 0.5rem;
+  overflow: hidden;
+}
+.joinUs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 30px;
 }
 
-.diplay span:nth-child(1){
-    position: relative;
-    animation: animate 8s;
-    animation-iteration-count: infinite;
-    animation-fill-mode: backwards;
+.diplay span:nth-child(1) {
+  position: relative;
+  animation: animate 8s;
+  animation-iteration-count: infinite;
+  animation-fill-mode: backwards;
 }
-.diplay span:nth-child(2){
-   position: relative;
-   animation: animate 8s;
-   animation-delay: 0.25s;
-   animation-iteration-count: infinite;
-   animation-fill-mode: backwards;
+.diplay span:nth-child(2) {
+  position: relative;
+  animation: animate 8s;
+  animation-delay: 0.25s;
+  animation-iteration-count: infinite;
+  animation-fill-mode: backwards;
 }
-.diplay span:nth-child(3){
-   position: relative;
-   animation: animate 8s;
-   animation-delay: 0.50s;
-   animation-iteration-count: infinite;
-   animation-fill-mode: backwards;
+.diplay span:nth-child(3) {
+  position: relative;
+  animation: animate 8s;
+  animation-delay: 0.5s;
+  animation-iteration-count: infinite;
+  animation-fill-mode: backwards;
 }
-.diplay span:nth-child(4){
-   position: relative;
-   animation: animate 8s ;
-   animation-delay: 0.75s;
-   animation-iteration-count: infinite;
-   animation-fill-mode: backwards;
+.diplay span:nth-child(4) {
+  position: relative;
+  animation: animate 8s;
+  animation-delay: 0.75s;
+  animation-iteration-count: infinite;
+  animation-fill-mode: backwards;
 }
-.boardButton{
-   background-color: transparent;
-   color: white;
-   height: 40px;
-   width: 150px;
-   border: 1px solid white;
-  
+.boardButton {
+  background-color: transparent;
+  color: white;
+  height: 40px;
+  width: 150px;
+  border: 1px solid white;
 }
-.boardButton:hover{
-   background-color: tomato;
-   font-weight: bold;
-   color: black;
-   animation: ease-in-out 2s;
+.boardButton:hover {
+  background-color: tomato;
+  font-weight: bold;
+  color: black;
+  animation: ease-in-out 2s;
 }
-.board{
-   display: flex; 
-   flex-wrap: wrap;
-   
+.board {
+  display: flex;
+  flex-wrap: wrap;
 }
 .board1 {
-   background-color: rgba(250, 7, 7, 0.7);
-   color: white;
-   width: 350px;
-   height: 300px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   margin-bottom: 5px;
-   border-radius: 15px;
-  
-   
+  background-color: rgba(250, 7, 7, 0.7);
+  color: white;
+  width: 350px;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 5px;
+  border-radius: 15px;
 }
 .board2 {
-   background-color: rgb(241, 240, 248);
-   align-self: stretch;
-   width: 350px;
-   height: 300px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   margin-bottom: 5px;
-   border-radius: 15px;
-   
+  background-color: rgb(241, 240, 248);
+  align-self: stretch;
+  width: 350px;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 5px;
+  border-radius: 15px;
 }
 
-.navLink{
-   display: inline-block;
-   font-size: 18px;
-   margin: 5px 15px;
-   
+.navLink {
+  display: inline-block;
 }
-.navUl{
-   display: flex;
-   justify-content: flex-end;
-   background-color: white;
-   width: 90vw;
-   padding: 5px;
-   margin: 0;
-   
+.navLink > a {
+  font-size: 18px;
+  margin: 5px 15px;
+  text-decoration: none;
+  /* color: black; */
 }
-.navLink:hover{
-   
-   text-decoration: underline;
-   color: blue;
-   font-weight: bold;
-   cursor: pointer;
+
+.navUl {
+  display: flex;
+  justify-content: flex-end;
+  background-color: white;
+  width: 98vw;
+  padding: 5px;
+  margin: 0;
 }
-.loginForm{
-   /* margin: auto; */
-   display: flex;
-   justify-self: stretch;
-   flex-direction: column;
-   width: 500px;
-   height: 200px;
-   background-color: #fff;
-   align-items: center;
-   justify-content: center;
-   border-radius: 10px;
+.navLink a:hover {
+  text-decoration: underline;
+  font-weight: bold;
+  cursor: pointer;
 }
-.loginForm >input{
-   height: 30px;
-   width: 300px;
-   margin-bottom: 10px;
-   border-radius: 5px;
-   outline: none;
-   border: 1px solid gray;
+.head {
+  position: absolute;
+  color: white;
 }
-.loginForm >input:hover{
-   background-color: beige;
-   
+.loginForm {
+  /* margin: auto; */
+  display: flex;
+  justify-self: stretch;
+  flex-direction: column;
+  width: 500px;
+  height: 200px;
+  /* background-color: #fff; */
+  align-items: center;
+  align-self: center;
+  justify-content: center;
+  border-radius: 10px;
+  margin-top: 4em;
 }
-.loginButton{
-   color: black;
-   background-color: transparent;
-   border: 1px solid black;
-   padding: 5px;
-   width: 70px;
-   margin-right: 95px;
+.loginForm > input,
+.inputField {
+  height: 30px;
+  width: 300px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  outline: none;
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  font-size: 18px;
+  border: 1px solid black;
+  z-index: 999;
 }
-.loginSpan{
-   color: black;
+.loginForm > input:hover,
+.inputField:hover {
+  background-color: black;
+  color: white;
 }
-.linkToSignup{
-   color: tomato;
+.loginButton {
+  color: black;
+  background-color: transparent;
+  border: 1px solid white;
+  font-weight: bold;
+  color: blanchedalmond;
+  padding: 5px;
+  width: 70px;
+  margin-top: 20px;
+  margin-right: 95px;
 }
-.linkToSignup:hover{
-   font-weight: bold;
-   text-decoration: underline;
-   cursor: pointer;
+.loginButton:hover {
+  background-color: black;
+  color: white;
 }
-.loginLabel{
-   color: black;
-   font-size: 18px;
-   font-weight: bold;
-   margin-bottom: 10px;
-   
+.loginSpan {
+  color: white;
 }
-.signupForm{
-   width: 500px;
-   height: 500px;
-   background-color: #FFF
+.linkToSignup {
+  color: royalblue;
 }
-.signupLabel{
-   color: black;
-   font-size: 18px;
-   font-weight: bold;
-   margin-bottom: 20px;
+.linkToSignup:hover {
+  font-weight: bold;
+  text-decoration: underline;
+  cursor: pointer;
 }
-.loginPage{
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   background-color: #fafafa;
-   height: 90vh;
-  
+
+.signupForm {
+  width: 500px;
+  height: 500px;
+  background-color: transparent;
 }
-.Fabar{
-   color: blue;
+
+.loginPage {
+  background: url("driver.jpg");
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  background-color: #fafafa;
+  height: 90vh;
 }
-.bar{
-   display: none;
-   background-color: white;
-   width: 90vw;
-   height: 50px;
+
+.underline {
+  overflow: visible; /* For IE */
+  padding: 0;
+  border: none;
+  border-top: medium double #fff;
+  color: #333;
+  text-align: center;
+  /* position: absolute; */
+  top: 10px;
 }
-.sideBar{
-   position: fixed;
-   z-index: 999;
-   width: 100%;
-   height: 100%;
-   background-color: #0d0d0d;
-   display: flex;
-   /* align-items: center; */
-   justify-content: center;
-   top: 0;
-   left: 0;
-   transition: 0.3s ease-in-out;
-   
+.underline:after {
+  content: "LOG IN";
+  font-family: "Times New Roman", sans-serif, "Franklin Gothic Medium",
+    "Arial Narrow", Arial, sans-serif;
+  position: relative;
+  top: -0.6em;
+  font-size: 1.5em;
+  padding: 0;
+  background: rgba(179, 177, 165, 1);
 }
-.close{
-   color: #fff;
+.signup_text::after {
+  content: "SIGN UP";
 }
-.icon{
-   position: absolute;
-   top: 1.2rem;
-   right: 1.5rem;
-   /* background-color: transparent; */
-   font-size: 2rem;
-   cursor: pointer;
-   outline: none;
+
+.Fabar {
+  color: blue;
 }
-.sidebarUl{
-   width: 90vw;
-   padding: 5px;
-   
+.bar {
+  display: none;
+  background-color: white;
+  width: 90vw;
+  height: 50px;
 }
-.sidebarLink{
+.sideBar {
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  background-color: #0d0d0d;
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  top: 0;
+  left: 0;
+  transition: 0.3s ease-in-out;
+}
+.close {
+  color: #fff;
+}
+.icon {
+  position: absolute;
+  top: 1.2rem;
+  right: 1.5rem;
+  /* background-color: transparent; */
+  font-size: 2rem;
+  cursor: pointer;
+  outline: none;
+}
+.sidebarUl {
+  width: 90vw;
+  padding: 5px;
+}
+.sidebarLink {
   list-style: none;
-   font-size: 30px;
-   font-weight: bold;
-   text-align: center;
-   width: auto;
-   color: #fff;
-   cursor: pointer;
-   padding: 15px 0;
-   transition: 0.2s ease-in-out;   
-   top: 0;
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  width: auto;
+  color: #fff;
+  cursor: pointer;
+  padding: 15px 0;
+  transition: 0.2s ease-in-out;
+  top: 0;
 }
-.false{  
-        display: none;
+.sidebarLink > a {
+  color: white;
+  text-decoration: none;
 }
-.dispNone{
-   display: none;
+.sidebarLink > a:hover {
+  background-color: white;
+  color: black;
 }
-.sidebarLink:hover{
+.false {
+  display: none;
+}
+.dispNone {
+  display: none;
+}
+.sidebarLink:hover {
   color: chartreuse;
-  transition: 0.2s ease-in-out;  
+  transition: 0.2s ease-in-out;
 }
 
-footer{
-   display: grid;
-   grid-template-columns: 1fr 1fr;
-   justify-items: center;
-   background-color: black;
-   color: white;
-   align-self: flex-end;
-   width: 100vw;
+footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  /* background-color: black; */
+  /* color: white; */
+  align-self: flex-end;
+  width: 100vw;
 }
-.socialMedia{
-   grid-column: span 2;
-   display: flex;
-   flex-direction: row;
+.socialMedia {
+  grid-column: span 2;
+  display: flex;
+  flex-direction: row;
 }
-.socialMedia > h4{
-   margin-left: 20px;
+.socialMedia > h4 {
+  margin-left: 20px;
 }
-#myVideo{
-   position: relative;
-   height: 100vh;
-   width: 100vw;
-   margin: 0;
-   object-fit: cover;
-   padding: 0;
-   /* position: fixed; */
-   /* right: 0;
+#myVideo {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  object-fit: cover;
+  padding: 0;
+  /* position: fixed; */
+  /* right: 0;
    bottom: 0; */
-   /* min-width: 100%; 
+  /* min-width: 100%; 
    min-height: 100%; */
 }
-
-@media screen and (max-width: 768px) {
-   .navUl{
-           display: none; 
-           
-   }
-.board1, .board2{
-   opacity: 0.7;
-   width: 100vw;
+.profilePix {
+  width: 35px;
+  border-radius: 50%;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #000000;
+  min-width: 120px;
+  z-index: 1;
+}
+.dropdown-content > a {
+  color: white;
+  padding: 5px 3px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  font-size: 18px;
+  font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro",
+    "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
 }
 
-   .Fabar{
-       display: block;
-       position: absolute;
-       top: 0;
-       right: 0;
-       transform: translate(-90%, 35%); 
-       font-size: 1.8rem;
-       cursor: pointer;
-       
-   }
-   .bar{
-       display: block;
-   }
- }
- @keyframes animate{
-    0%{
-       bottom: -100px;
-    }
-    25%{
-      bottom: 0px;
-   }
+.dropdown-content > a:hover {
+  background-color: #ffffff;
+  color: black;
+}
+.dropdown-content-show {
+  display: flex;
+  flex-direction: column;
+  padding: 5px 3px;
+}
+.dashboardContainer {
+  display: grid;
+  grid-template-columns: 20% 72% 10%;
+  /* grid-column-gap: 20px; */
+  /* justify-items: center; */
+  justify-content: center;
+  width: 98vw;
+}
+.dashboardFirstDiv {
+  position: relative;
+  border-right: 3px solid black;
+  padding-right: 15px;
+}
+.dashboardSecondDiv {
+  background-color: beige;
+}
+.dashboardThirdDiv {
+  justify-self: center;
+  padding: 0 20px;
+}
+.themeChangeButton{
+  margin: 0 10px;
+}
+.orderButton {
+  position: absolute;
+  width: 80%;
+  left: 40px;
+  top: 20px;
+  padding: 5px;
+  border-radius: 10px;
+  height: 30px;
+  cursor: pointer;
+}
+.orderButton:hover {
+  background-color: transparent;
+  border: 2px solid red;
+}
+.DashboardSidebar {
+  margin-top: 70px;
+  list-style: none;
+}
+.DashboardSidebarList {
+  margin: 20px 0;
+  margin-left: 30px;
+}
+.DashboardSidebarList:hover {
+  font-weight: bold;
+  text-decoration: underline;
+  background-color: blue;
+  padding: 5px;
+}
+.DashboardSidebarList > a {
+  text-decoration: none;
+}
+.notification {
+  background-color: gray;
+  color: white;
+}
+.notification:nth-of-type(even) {
+  background-color: #eceae0;
+  color: #333;
+}
+.notificationPlane {
+  display: inline-block;
+}
+.messageContent {
+  position: relative;
+  line-height: 50px;
+  padding-left: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
 
- }
+.messageContent:hover {
+  border: 2px solid beige;
+  cursor: pointer;
+}
+.messageBody {
+  position: absolute;
+  left: 25%;
+}
+.delete {
+  position: absolute;
+  font-size: 22px;
+  right: 20px;
+  top: 10px;
+  display: none;
+}
+.messageContent:hover .delete {
+  display: inline-block;
+}
+.icons {
+  margin-right: 15px;
+}
+.AvailableContainer {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.AvailableContent{
+  margin: 10px;
+  border: 3px solid black;
+}
+.AvailableRidePix{
+  width: 200px;
+  height: 200px;
+}
+@media screen and (max-width: 768px) {
+  .navUl {
+    display: none;
+  }
+  .board1,
+  .board2 {
+    opacity: 0.7;
+    width: 100vw;
+  }
+
+  .Fabar {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-90%, 35%);
+    font-size: 1.8rem;
+    cursor: pointer;
+  }
+  .bar {
+    display: block;
+  }
+}
+@keyframes animate {
+  0% {
+    bottom: -100px;
+  }
+  25% {
+    bottom: 0px;
+  }
+}
