--- a/src/style.css
+++ b/src/style.css
@@ -377,6 +377,7 @@ footer {
 }
 .dashboardSecondDiv {
   background-color: beige;
+  
 }
 .dashboardThirdDiv {
   justify-self: center;
@@ -457,19 +458,23 @@ footer {
 .icons {
   margin-right: 15px;
 }
-.AvailableContainer {
+/* .AvailableContainer {
   width: 100%;
   display: flex;
+  background-color: crimson;
   flex-wrap: wrap;
 }
 .AvailableContent{
+  display: flex;
+  width: 500px;
   margin: 10px;
   border: 3px solid black;
 }
 .AvailableRidePix{
   width: 200px;
   height: 200px;
-}
+  margin-right: 10px;
+} */
 .drivers{
   width: 100px;
   height: 100px;
@@ -514,6 +519,68 @@ border-radius: 5px;
   background-color: white;
   color: #0d0d0d;
 }
+
+
+
+
+.cardContainer{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  
+  
+}
+.flip-card {
+  background-color: transparent;
+  flex-direction: column;
+  margin: 10px;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+  
+}
+
+.flip-card-back {
+  background-color: #2980b9;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+
+
+
+
+
+
+
+
 @media screen and (max-width: 1035px) {
   .messageBody{
     height: auto;
@@ -544,15 +611,31 @@ border-radius: 5px;
 
   .Fabar {
     display: block;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     transform: translate(-90%, 35%);
     font-size: 1.8rem;
     cursor: pointer;
+    
   }
   .bar {
     display: block;
+    position: fixed;
+    z-index: 999;
+    width: 100vw;
+  }
+  .cardContainer{
+    display: block;
+    width: 100%;
+
+    margin: 5px auto;
+  }
+  .flip-card-inner{
+    box-shadow: none;
+  }
+  .flip-card{
+    width: 100vw;
   }
 }
 @keyframes animate {
