--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,7 @@ body {
   background: url("driver.jpg");
   background-size: cover;
 }
+
 .diplay {
   position: absolute;
   top: 50%;
@@ -118,9 +119,10 @@ body {
   display: flex;
   justify-content: flex-end;
   background-color: white;
-  width: 98vw;
-  padding: 5px;
+  width: 96vw;
   margin: 0;
+  padding-top: 35px;
+  padding-bottom: 35px;
 }
 .navLink a:hover {
   text-decoration: underline;
@@ -172,7 +174,8 @@ body {
 .loginSpan {
   color: white;
 }
-.linkToSignup, .loginButton {
+.linkToSignup,
+.loginButton {
   background-color: transparent;
   color: #fff;
   margin-left: 5px;
@@ -180,7 +183,8 @@ body {
   width: 70px;
   border: 1px solid white;
 }
-.linkToSignup:hover, .loginButton:hover {
+.linkToSignup:hover,
+.loginButton:hover {
   font-weight: bold;
   text-decoration: underline;
   cursor: pointer;
@@ -330,19 +334,17 @@ footer {
 .profilePix {
   width: 35px;
   border-radius: 50%;
-  
 }
 .dropdown-content {
   display: none;
   position: absolute;
-  top: 22px;
   font-size: 22px;
   min-width: 120px;
   z-index: 1;
 }
 .dropdown-content > a {
   color: white;
-  padding: 5px 3px;
+  padding: 5px 1px;
   text-align: center;
   text-decoration: none;
   display: block;
@@ -357,33 +359,31 @@ footer {
   color: black;
 }
 .dropdown-content-show {
+  margin-right: 35px;
   display: flex;
   flex-direction: column;
   padding: 5px 3px;
-  
 }
 .dashboardContainer {
   display: grid;
-  grid-template-columns: 20% 72% 10%;
+  grid-template-columns: 20% 70% 10%;
   /* grid-column-gap: 20px; */
   /* justify-items: center; */
   justify-content: center;
-  width: 98vw;
+  width: 100vw;
 }
 .dashboardFirstDiv {
   position: relative;
   border-right: 3px solid black;
-  padding-right: 15px;
 }
 .dashboardSecondDiv {
   background-color: beige;
-  
 }
 .dashboardThirdDiv {
-  justify-self: center;
-  padding: 0 20px;
+  /* justify-self: center; */
+  padding: 0;
 }
-.themeChangeButton{
+.themeChangeButton {
   margin: 0 10px;
 }
 .orderButton {
@@ -444,6 +444,7 @@ footer {
   position: absolute;
   display: inline-block;
   left: 43%;
+  font-weight: bold;
 }
 .delete {
   position: absolute;
@@ -475,60 +476,64 @@ footer {
   height: 200px;
   margin-right: 10px;
 } */
-.drivers{
+.drivers {
   width: 100px;
   height: 100px;
 }
-.tripIcons{
+.tripIcons {
   font-size: 20px;
 }
-.tripDetails{
+.tripDetails {
   position: relative;
   display: flex;
+  flex-wrap: wrap;
   margin-left: 10px;
   margin-top: 10px;
   cursor: pointer;
 }
-.tripDetails:hover{
+.tripDetails:hover {
   border: 1px solid black;
- 
 }
-.tripDetails >.secondChild{
-  left: 200px;
+.tripDetails > .secondChild {
+  margin-left: 20%;
   margin-top: 10px;
-  position: absolute;
-
+  /* position: absolute; */
 }
-.road, .location, .date{
+.thirdChildContainer {
+  position: relative;
+  float: right;
+}
+.thirdChild {
+  position: relative;
+  float: right;
+}
+.road,
+.location,
+.date {
   margin-left: 20px;
   font-size: 14px;
 }
-.changeColorButton{
-display: flex;
-justify-content: center;
+.changeColorButton {
+  display: flex;
+  justify-content: center;
 }
-.changeColorButton > button{
-width: 200px;
-height: 40px;
-background-color: transparent;
-border: 2px solid white;
-color: white;
-border-radius: 5px;
+.changeColorButton > button {
+  width: 200px;
+  height: 40px;
+  background-color: transparent;
+  border: 2px solid white;
+  color: white;
+  border-radius: 5px;
 }
-.changeColorButton > button:hover{
+.changeColorButton > button:hover {
   background-color: white;
   color: #0d0d0d;
 }
 
-
-
-
-.cardContainer{
+.cardContainer {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  
-  
 }
 .flip-card {
   background-color: transparent;
@@ -546,14 +551,15 @@ border-radius: 5px;
   text-align: center;
   transition: transform 0.6s;
   transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
 }
 
-.flip-card-front, .flip-card-back {
+.flip-card-front,
+.flip-card-back {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -564,7 +570,6 @@ border-radius: 5px;
 .flip-card-front {
   background-color: #bbb;
   color: black;
-  
 }
 
 .flip-card-back {
@@ -573,19 +578,54 @@ border-radius: 5px;
   transform: rotateY(180deg);
 }
 
+#modal {
+  background-color: rgba(0, 0, 0, 0.9);
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+#modal:empty {
+  display: none;
+}
 
+#modal > div {
+  background-color: white;
+  max-width: 500px;
+  padding: 70px;
+  border-radius: 5px;
+  text-align: center;
+}
 
-
-
-
-
-
+#modal button {
+  display: inline-block;
+  margin-right: 15px;
+}
+.modalInput {
+  margin: 10px;
+}
+.logo{
+  position: absolute;
+  left: 180px;
+  color: white;
+  
+  margin-top: 0;
+}
+.logo > p{
+  margin-top: 0;
+  height: auto;
+}
 @media screen and (max-width: 1035px) {
-  .messageBody{
+  .messageBody {
     height: auto;
   }
-  .messageBody{
+  .messageBody {
     position: relative;
     display: block;
     margin: 0;
@@ -594,20 +634,22 @@ border-radius: 5px;
   }
 }
 @media screen and (max-width: 768px) {
-  .navUl, .dashboardFirstDiv, .dashboardThirdDiv {
+  .navUl,
+  .dashboardFirstDiv,
+  .dashboardThirdDiv {
     display: none;
   }
-  
-  .tripDetails, .notification{
+
+  .notification {
     width: 100vw;
     margin-left: 20px;
   }
-  
-  .board1,
+
+  /* .board1,
   .board2 {
     opacity: 0.7;
     width: 100vw;
-  }
+  } */
 
   .Fabar {
     display: block;
@@ -617,7 +659,6 @@ border-radius: 5px;
     transform: translate(-90%, 35%);
     font-size: 1.8rem;
     cursor: pointer;
-    
   }
   .bar {
     display: block;
@@ -625,16 +666,18 @@ border-radius: 5px;
     z-index: 999;
     width: 100vw;
   }
-  .cardContainer{
+  .thirdChild {
+  }
+  .cardContainer {
     display: block;
     width: 100%;
 
     margin: 5px auto;
   }
-  .flip-card-inner{
+  .flip-card-inner {
     box-shadow: none;
   }
-  .flip-card{
+  .flip-card {
     width: 100vw;
   }
 }
@@ -646,4 +689,3 @@ border-radius: 5px;
     bottom: 0px;
   }
 }
-
