--- a/src/style.css
+++ b/src/style.css
@@ -106,7 +106,7 @@ body {
 }
 
 .navLink {
-  display: inline-block;
+  list-style: none;
 }
 .navLink > a {
   font-size: 18px;
@@ -116,13 +116,15 @@ body {
 }
 
 .navUl {
+  position: relative;
   display: flex;
   justify-content: flex-end;
   background-color: white;
-  width: 96vw;
+  width: 98vw;
   margin: 0;
-  padding-top: 35px;
-  padding-bottom: 35px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
 .navLink a:hover {
   text-decoration: underline;
@@ -333,6 +335,7 @@ footer {
 }
 .profilePix {
   width: 35px;
+  height: 35px;
   border-radius: 50%;
 }
 .dropdown-content {
@@ -366,7 +369,7 @@ footer {
 }
 .dashboardContainer {
   display: grid;
-  grid-template-columns: 20% 70% 10%;
+  grid-template-columns: 18% 72% 10%;
   /* grid-column-gap: 20px; */
   /* justify-items: center; */
   justify-content: center;
@@ -374,7 +377,8 @@ footer {
 }
 .dashboardFirstDiv {
   position: relative;
-  border-right: 3px solid black;
+  border-right: 1px solid rgba(255, 255, 255, 0.5);
+  height: 100vh;
 }
 .dashboardSecondDiv {
   background-color: beige;
@@ -382,6 +386,7 @@ footer {
 .dashboardThirdDiv {
   /* justify-self: center; */
   padding: 0;
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
 }
 .themeChangeButton {
   margin: 0 10px;
@@ -390,7 +395,7 @@ footer {
   position: absolute;
   width: 80%;
   left: 40px;
-  top: 20px;
+  top: 35px;
   padding: 5px;
   border-radius: 10px;
   height: 30px;
@@ -405,8 +410,8 @@ footer {
   list-style: none;
 }
 .DashboardSidebarList {
-  margin: 20px 0;
-  margin-left: 30px;
+  margin: 30px 0;
+  margin-right: 5px;
 }
 .DashboardSidebarList:hover {
   font-weight: bold;
@@ -429,8 +434,12 @@ footer {
   display: inline-block;
 }
 .messageContent {
+  display: flex;
+  flex-wrap: wrap;
+  /* align-items: center; */
   position: relative;
-  line-height: 50px;
+  padding: 10px 0;
+  height: 50px;
   padding-left: 5px;
   font-size: 16px;
   cursor: pointer;
@@ -440,21 +449,28 @@ footer {
   border: 2px solid beige;
   cursor: pointer;
 }
-.messageBody {
+.abs {
   position: absolute;
-  display: inline-block;
-  left: 43%;
+}
+.messageBody {
+  float: left;
+  margin-left: 250px;
+  margin-right: 2px;
   font-weight: bold;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 40vw;
 }
 .delete {
-  position: absolute;
+  margin-left: 2px;
+  float: right;
   font-size: 22px;
-  right: 20px;
-  top: 10px;
-  display: none;
+  visibility: hidden;
 }
 .messageContent:hover .delete {
-  display: inline-block;
+  /* display: inline-block; */
+  visibility: visible;
 }
 .icons {
   margin-right: 15px;
@@ -539,7 +555,7 @@ footer {
   background-color: transparent;
   flex-direction: column;
   margin: 10px;
-  width: 300px;
+  width: 280px;
   height: 300px;
   perspective: 1000px;
 }
@@ -610,27 +626,29 @@ footer {
 .modalInput {
   margin: 10px;
 }
-.logo{
+.logo {
+  /* background-color:  rgba(255, 255, 255, 0.5); */
   position: absolute;
-  left: 180px;
+  top: 5px;
+  left: 60px;
+  align-self: flex-start;
+  z-index: 10;
+
   color: white;
-  
+  cursor: pointer;
   margin-top: 0;
 }
-.logo > p{
+.logo > p {
   margin-top: 0;
-  height: auto;
 }
 @media screen and (max-width: 1035px) {
   .messageBody {
-    height: auto;
+    /* width: 220px; */
   }
-  .messageBody {
-    position: relative;
-    display: block;
-    margin: 0;
-    /* margin-left: 10px; */
-    left: 0;
+
+  .orderButton {
+    left: 20px;
+    padding: 5px;
   }
 }
 @media screen and (max-width: 768px) {
@@ -639,39 +657,47 @@ footer {
   .dashboardThirdDiv {
     display: none;
   }
+  .dashboardContainer{
+    grid-template-columns: 18% 76% 10%;
+  }
 
   .notification {
     width: 100vw;
-    margin-left: 20px;
   }
-
-  /* .board1,
-  .board2 {
-    opacity: 0.7;
+  
+  .messageContent {
+    display: block;
+    margin-left: 15px;
     width: 100vw;
-  } */
-
+  }
+  
+  .messageBody {
+    margin: 1px 0px;
+    width: 250px;
+  }
   .Fabar {
     display: block;
     position: fixed;
-    top: 0;
+    top: 5px;
     right: 0;
+    background-color: white;
     transform: translate(-90%, 35%);
     font-size: 1.8rem;
     cursor: pointer;
   }
   .bar {
     display: block;
-    position: fixed;
+    position: sticky;
+    margin-bottom: 50px;
     z-index: 999;
-    width: 100vw;
-  }
-  .thirdChild {
+    height: 1px;
+    background-color: transparent;
+    width: 10vw;
+
   }
   .cardContainer {
     display: block;
     width: 100%;
-
     margin: 5px auto;
   }
   .flip-card-inner {
@@ -681,6 +707,7 @@ footer {
     width: 100vw;
   }
 }
+
 @keyframes animate {
   0% {
     bottom: -100px;
