--- a/src/style.css
+++ b/src/style.css
@@ -234,12 +234,13 @@ body {
 }
 
 .Fabar {
+  position: fixed;
   color: blue;
 }
 .bar {
   display: none;
   background-color: white;
-  width: 90vw;
+  width: 80vw;
   height: 50px;
 }
 .sideBar {
@@ -310,7 +311,7 @@ footer {
   /* background-color: black; */
   /* color: white; */
   align-self: flex-end;
-  width: 100vw;
+  width: 90vw;
 }
 .socialMedia {
   grid-column: span 2;
@@ -673,27 +674,29 @@ footer {
   
   .messageBody {
     margin: 1px 0px;
-    width: 250px;
+    width: 240px;
+  }
+  .space{
+    margin-top: 40px;
   }
   .Fabar {
     display: block;
     position: fixed;
-    top: 5px;
-    right: 0;
+    top: 0px;
+    width: 100vw;
+    height: 40px;
+    padding-right: 10px;
     background-color: white;
-    transform: translate(-90%, 35%);
+    /* transform: translate(-90%, 35%); */
     font-size: 1.8rem;
     cursor: pointer;
-  }
-  .bar {
-    display: block;
-    position: sticky;
-    margin-bottom: 50px;
+    color: black;
     z-index: 999;
-    height: 1px;
-    background-color: transparent;
-    width: 10vw;
-
+  }
+  
+  .diplay{
+    left: 2px;
+    top: 25%
   }
   .cardContainer {
     display: block;
