--- a/src/components/DriverEditProfileCard/DriverEditProfileCard.css
+++ b/src/components/DriverEditProfileCard/DriverEditProfileCard.css
@@ -2,7 +2,6 @@
     width: 100%;
     height: 100%;
     background-color: #e7e5e5;
-    border-radius: 20px;
     display: inline-block;
 }
 .personal-profile{
@@ -11,24 +10,29 @@
     height: 85%;
     /* background-color: blue; */
     display: flex;
+    flex-direction: column;
+    align-items: center;
+   
 }
 
-.card-one{
-    height: 100%;
-    width: 40%;
-    margin: 0 5% 0 0;
-    border-radius: 20px;
-    background-color: white;
-}
-.profile-image-container{
-    height: 50%;
-    background-color: blue;
+
+.profile-image-conatainer{
+   border: 2px solid black;
+   width: 120px;
+   height: 120px;
+   border-radius: 50%;
+   object-fit: contain;
+   overflow: hidden;
+   display: flex;
+   justify-content: center;
 }
 .profile-image{
     display: block;
+    width: 120px;
+    height: 120px;
     margin: 0 10%;
-    width: 80%;
-    height: 270px;
+    
+   
 }
 .card-two-three-conatiner{
     height: 100%;
@@ -70,12 +74,11 @@
 #profile-input{
     width: 70%;
     margin: 0;
-    pointer-events: none;
+   
     background-color: #dddddd;
     /* flex-direction: row; */
 }
 .input-disabled-false{
-    pointer-events: unset !important;
     background-color: #fff !important;
 }
 .names{
@@ -84,8 +87,14 @@
 .edit-name-button{
     width: 100px;
     height: 50px;
-    border-radius: 15px;
-    margin: 0 auto;
-    margin-left: 40%;
+    border-radius: 5px;
     background-color: lightblue;
+}
+.form-container{
+    width: 70%;
+    margin-top: 10px;
+}
+.input-new-class{
+    width: 100% !important;
+    margin-bottom: 5px !important;
 }
