--- a/src/components/EditProfileCard/EditProfileCard.css
+++ b/src/components/EditProfileCard/EditProfileCard.css
@@ -1,26 +1,24 @@
-.profile-container{
+/* .profile-container{
     width: 100%;
     height: 100%;
     background-color: #e7e5e5;
-    border-radius: 20px;
     display: inline-block;
-}
-.personal-profile{
+} */
+/* .personal-profile{
     margin: 3% 5%;
     width: 90%;
     height: 85%;
-    /* background-color: blue; */
-    display: flex;
-}
+     background-color: blue; 
+    display: flex; 
+} */
 
-.card-one{
+/* .card-one{
     height: 100%;
     width: 40%;
     margin: 0 5% 0 0;
-    border-radius: 20px;
     background-color: white;
-}
-.profile-image-container{
+} */
+/* .profile-image-container{
     height: 50%;
     background-color: blue;
 }
@@ -29,8 +27,8 @@
     margin: 0 10%;
     width: 80%;
     height: 270px;
-}
-.card-two-three-conatiner{
+} */
+/* .card-two-three-conatiner{
     height: 100%;
     width: 40%;
     border-radius: 20px;
@@ -71,10 +69,10 @@
     width: 70%;
     margin: 0;
     pointer-events: none;
-    background-color: #dddddd;
+    background-color: #dddddd; */
     /* flex-direction: row; */
-}
-.input-disabled-false{
+/* } */
+/* .input-disabled-false{
     pointer-events: unset !important;
     background-color: #fff !important;
 }
@@ -89,4 +87,4 @@
     margin-left: 40%;
     background-color: lightblue;
     cursor: pointer;
-}
+} */
